<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/bgIdle"
    android:padding="16dp"
    tools:context=".ReportActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tvHeader2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGenerate"
        android:textStyle="bold"
        android:textSize="25sp"
        style="?android:attr/buttonBarButtonStyle" />
    <EditText
        android:id="@+id/repLotNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lotnumber2"
        android:autofillHints="no"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnGenerate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGenerate2"
        android:textStyle="bold"
        android:textSize="25sp"
        style="?android:attr/buttonBarButtonStyle" />


    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:textStyle="bold"
        android:textSize="25sp"
        style="?android:attr/buttonBarButtonStyle" />


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        />

</LinearLayout>